tests/cheri-ci/expected/0065-const1.error.c.expected
cheri-ci/0065-const1.error.c:6:3: error: constraint violation: expression is not assignable
  *x = 0; // this is an error
  ~~ ^
ยง6.5.16#2: 
2   An assignment operator shall have a modifiable lvalue as its left operand.
